# Copyright (C) 1999-2009 Lorenzo Bettini <http://www.lorenzobettini.it>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# these are the files used when building source-highlight with qmake
# and msvc (who does not provide these features)

EXTRA_DIST = \
	compat_dirent.h \
	compat_dirent.cpp \
	getopt_int.h \
	getopt.h \
	getopt.c \
	getopt1.c \
	unistd.h